[package]
name = "md-to-tui"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "simple parser from markdown to ratatui types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
thiserror = "1"
ratatui = "0.26"

[dev-dependencies]
crossterm = "0.27"
pretty_env_logger = "0.5"
